# ga-bootstrap

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: SECURITY.md
src/ga-bootstrap/etc/systemd/system/: ga-bootstrap.service
src/ga-bootstrap/etc/systemd/system/multi-user.target.wants/: ga-bootstrap.service
src/ga-bootstrap/usr/sbin/: ga-bootstrap
tests/: conftest.py  test_bootstrap.py
